--- a/app/views/hiddens/create.js.erb
+++ b/app/views/hiddens/create.js.erb
@@ -1,2 +1,2 @@
-$('span.hidden_button').hide().html("<%=j render 'shared/unhide', 
+$('div#hide_id_<%= @profile.id %>').hide().html("<%=j render 'shared/unhide', 
 	object: @profile %>").show();
