--- a/app/views/layouts/_navlinks.html.erb
+++ b/app/views/layouts/_navlinks.html.erb
@@ -9,7 +9,7 @@
       <%= link_to "Dating- Home", root_url, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
-            <li><%= link_to "Search For Matches!", new_search_path %></li>
+            <li><%= link_to "Search For Matches!", new_search_path if current_user && current_user.profile %></li>
             <li><%= link_to "Contact", contact_url %></li>
             <li><%= link_to "Blog", '#'  %></li>
         </ul>
