--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,3 +1,3 @@
-Edit your profile
+<h2>Edit your profile (<%= link_to "Edit Your Photos", edit_profile_photo_path([@profile]) %>)</h2>
 
 <%= render 'form' %>
