--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -9,29 +9,37 @@
 	<%= render 'actions', object: @profile unless @profile== current_user.profile %>
 <% end %>
 <h2>
-<%= display_main_photo(@profile) %>
-<%= @profile.nick_name %><br>
-<% if current_user.profile == @profile %>
-	(<%= link_to "Edit your photos", edit_profile_photo_path([@profile]) %>)
+<% if @profile.photos.any? %>
+<%= render 'carousel', collection: @profile.photos %>
 <% else %>
+<%= display_main_photo(@profile) %>
+<% end %>
+<%= @profile.nick_name %><br>
+<% if current_user.profile == @profile && @profile.photos.any? %>
+	(<%= link_to "Edit your photos", edit_profile_photo_path(@profile, @profile.photos.first) %>)
+<% elsif current_user.profile == @profile %>
+	(<%= link_to "Add a new photo", new_profile_photo_path(@profile) %>)
+<% else %>	
     <% if current_user.admin? %>
       <%= link_to "Delete #{@profile.nick_name}", @profile, method: :delete, 
           class: "btn btn-danger btn-small", confirm: "Are you sure?" %>
     <% end %>
-	<% if !current_user.profile.sent_wink?(@profile.id) %>
-	<span class="new_wink">
-		<%= render 'shared/send_wink', object: @profile %>
-	</span>
-	<% else %>
-		<%= render 'shared/sent_wink', object: @profile %>
+	<% unless current_user.profile == @profile %>	
+		<% if !current_user.profile.sent_wink?(@profile.id) %>
+		<span class="new_wink">
+			<%= render 'shared/send_wink', object: @profile %>
+		</span>
+		<% else %>
+			<%= render 'shared/sent_wink', object: @profile %>
+		<% end %>
+		<% if !current_user.profile.favorited?(@profile.id) %>
+		<span class="favorite">
+			<%= render 'shared/favorite_button', object: @profile %>
+		<% else %>
+			<%= render 'shared/favorited_button', object: @profile %>
+		<% end %>
+		</span>
 	<% end %>
-	<% if !current_user.profile.favorited?(@profile.id) %>
-	<span class="favorite">
-		<%= render 'shared/favorite_button', object: @profile %>
-	<% else %>
-		<%= render 'shared/favorited_button', object: @profile %>
-	<% end %>
-	</span>
 <% end %>
 </h2>
 <span class="profile_header"><%= @profile.age %> / <%= @profile.sex %> /
