--- a/app/views/forem/posts/_reply_to_post.html.erb
+++ b/app/views/forem/posts/_reply_to_post.html.erb
@@ -3,7 +3,11 @@
 
   <div class='user'>
     <div class='username'>
-      <%= link_to_if Forem.user_profile_links, post.user, [main_app, post.user] %>
+      <% if post.user.profile %>
+      <%= link_to_if Forem.user_profile_links, post.user, [main_app, post.user.profile] %>
+      <% else %>
+      <%= link_to_if Forem.user_profile_links, post.user, '#' %>
+      <% end %>
     </div>
     <div class='icon'><%= forem_avatar(post.user, :size => 60) %></div>
   </div>
