--- a/app/views/layouts/_navlinks.html.erb
+++ b/app/views/layouts/_navlinks.html.erb
@@ -10,9 +10,11 @@
       <div class="container nav-collapse">
         <ul class="nav">
             <li><%= link_to "Search For Matches!", main_app.new_search_path if current_user && current_user.profile %></li>
-            <li><%= link_to "Contact", main_app.contact_url %></li>
             <li><%= link_to "Blog", main_app.blogs_path  %></li>
-            <li><%= link_to "Forums", forem.root_path %>
+            <li><%= link_to "Forums", forem.root_path %></li>
+            <% if current_user.forem_admin %>
+            <li><%= link_to "Administrate", forem.admin_root_url %></li>
+            <% end %>
         </ul>
         <ul class="nav pull-right">
           <% if signed_in? %>
