--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 
     <div class="container">
       <%= render 'layouts/display_flash' %>
-    
+      <%= announce Announcement.newest, :format => "bootstrap" if Announcement.any? %>
       <div class="content">
         <div class="row">
           <div class="span8"><!-- originally span9 if something goes wrong -->
