--- a/app/views/layouts/_navlinks.html.erb
+++ b/app/views/layouts/_navlinks.html.erb
@@ -12,8 +12,11 @@
             <li><%= link_to "Search For Matches!", main_app.new_search_path if current_user && current_user.profile %></li>
             <li><%= link_to "Blog", main_app.blogs_path  %></li>
             <li><%= link_to "Forums", forem.root_path %></li>
-            <% if current_user.forem_admin %>
+            <% if signed_in? && current_user.forem_admin %>
             <li><%= link_to "Administrate", forem.admin_root_url %></li>
+            <% end %>
+            <% if signed_in? && current_user.admin? %>
+            <li><%= link_to "SITE DASHBOARD", rails_admin.dashboard_path %></li>
             <% end %>
         </ul>
         <ul class="nav pull-right">
