Fixed a buggy link

--- a/app/views/layouts/_navlinks.html.erb
+++ b/app/views/layouts/_navlinks.html.erb
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <%= link_to "Dating- Home", root_url, class: "brand" %>
+      <%= link_to "Dating- Home", main_app.root_url, class: "brand" %>
       <div class="container nav-collapse">
         <ul class="nav">
             <li><%= link_to "Search For Matches!", main_app.new_search_path if current_user && current_user.profile %></li>
